tests/snapshots/markdown_tests__test__appends_parameters_to_the_end_of_urls.snap
---
source: tests/markdown_tests.rs
description: appends_parameters_to_the_end_of_urls
info: "\n[an link](relative/link)\n"
---
ParsedMarkdown {
    html: "<p><a href=\"relative/link?base=123\">an link</a></p>\n",
    headings: [],
    links: [
        Link {
            title: "an link",
            url: Local(
                "relative/link?base=123",
            ),
        },
    ],
    blocks: {},
}
