tests/snapshots/markdown_tests__test__detects_emojis_in_links.snap
---
source: tests/markdown_tests.rs
description: detects_emojis_in_links
info: "[:grinning:](/foo)"
---
ParsedMarkdown {
    html: "<p><a href=\"/foo\">😀</a></p>\n",
    preview: "😀",
    headings: [],
    links: [
        Link {
            title: "😀",
            url: Local(
                "/foo",
            ),
        },
    ],
    blocks: {},
}
