tests/snapshots/markdown_tests__test__does_not_rewrite_non_absolute_urls.snap
---
source: tests/markdown_tests.rs
description: does_not_rewrite_non_absolute_urls
info: "\n[an link](https://www.google.com)\n"
---
ParsedMarkdown {
    html: "<p><a href=\"https://www.google.com\">an link</a></p>\n",
    headings: [],
    links: [
        Link {
            title: "an link",
            url: Remote(
                Url {
                    scheme: "https",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "www.google.com",
                        ),
                    ),
                    port: None,
                    path: "/",
                    query: None,
                    fragment: None,
                },
            ),
        },
    ],
}
