tests/snapshots/markdown_tests__test__does_not_rewrite_relative_urls.snap
---
source: tests/markdown_tests.rs
description: does_not_rewrite_relative_urls
info: "\n[a relative link](relative/link)\n"
---
ParsedMarkdown {
    html: "<p><a href=\"relative/link\">a relative link</a></p>\n",
    headings: [],
    links: [
        Link {
            title: "a relative link",
            url: Local(
                "relative/link",
            ),
        },
    ],
    blocks: {},
}
