tests/snapshots/markdown_tests__test__gathers_the_internal_text_of_a_link.snap
---
source: tests/markdown_tests.rs
description: gathers_the_internal_text_of_a_link
info: "[**BOLD**](/bar)\n[![AltText](/src/foo)](/bar)\n## [AnHeader](/bar)"
---
Markdown {
    as_html: "<p><a href=\"/bar\"><strong>BOLD</strong></a>\n<a href=\"/bar\"><img src=\"/src/foo\" alt=\"AltText\"></a></p>\n<h2 id=\"anheader\"><a href=\"/bar\">AnHeader</a></h2>\n",
    headings: [
        Heading {
            title: "AnHeader",
            anchor: "anheader",
            level: 2,
            is_tab: false,
        },
    ],
    links: [
        Link {
            title: "BOLD",
            url: Local(
                "/bar",
            ),
        },
        Link {
            title: "AltText",
            url: Local(
                "/bar",
            ),
        },
        Link {
            title: "AnHeader",
            url: Local(
                "/bar",
            ),
        },
    ],
}
