tests/snapshots/markdown_tests__test__inline_code_in_headings_is_included_in_heading_titles.snap
---
source: tests/markdown_tests.rs
description: inline_code_in_headings_is_included_in_heading_titles
info: "# Foo `bar` baz\n        "
---
ParsedMarkdown {
    html: "<h1 id=\"foo-bar-baz\">Foo <code>bar</code> baz</h1>\n",
    headings: [
        Heading {
            title: "Foo bar baz",
            anchor: "foo-bar-baz",
            level: 1,
        },
    ],
    links: [],
}
