tests/snapshots/markdown_tests__test__it_detects_math_blocks.snap
---
source: tests/markdown_tests.rs
description: it_detects_math_blocks
info: "```math\n% \\f is defined as #1f(#2) using the macro\n\\f\\relax{x} = \\int_{-\\infty}^\\infty\n    \\f\\hat\\xi\\,e^{2 \\pi i \\xi x}\n    \\,d\\xi\n```\n"
---
ParsedMarkdown {
    html: "<div class=\"math\">\n% \\f is defined as #1f(#2) using the macro\n\\f\\relax{x} = \\int_{-\\infty}^\\infty\n    \\f\\hat\\xi\\,e^{2 \\pi i \\xi x}\n    \\,d\\xi\n</div>",
    headings: [],
    links: [],
}
