tests/snapshots/markdown_tests__test__rewrite_link_root_path.snap
---
source: tests/markdown_tests.rs
description: rewrite_link_root_path
info: "\n[an link](/foo/bar)\n"
---
ParsedMarkdown {
    html: "<p><a href=\"/other/root/foo/bar\">an link</a></p>\n",
    headings: [],
    links: [
        Link {
            title: "an link",
            url: Local(
                "/other/root/foo/bar",
            ),
        },
    ],
    blocks: {},
}
