tests/snapshots/markdown_tests__test__rewrites_any_link_that_has_an_explicit_rewrite_mapping.snap
---
source: tests/markdown_tests.rs
description: rewrites_any_link_that_has_an_explicit_rewrite_mapping
info: "\n[an document](/assets/plans.pdf)\n"
---
Markdown {
    as_html: "<p><a href=\"https://example.com/plans.pdf\">an document</a></p>\n",
    headings: [],
    links: [
        Link {
            title: "an document",
            url: Remote(
                Url {
                    scheme: "https",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "example.com",
                        ),
                    ),
                    port: None,
                    path: "/plans.pdf",
                    query: None,
                    fragment: None,
                },
            ),
        },
    ],
}
