tests/snapshots/markdown_tests__test__supports_headings.snap
---
source: tests/markdown_tests.rs
description: supports_headings
info: "# My heading\n\nSome content\n\n## Some other heading"
---
ParsedMarkdown {
    html: "<h1 id=\"my-heading\">My heading</h1>\n\n<p>Some content</p>\n<h2 id=\"some-other-heading\">Some other heading</h2>\n\n",
    headings: [
        Heading {
            title: "My heading",
            anchor: "my-heading",
            level: 1,
        },
        Heading {
            title: "Some other heading",
            anchor: "some-other-heading",
            level: 2,
        },
    ],
    links: [],
}
